--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,22 @@
 .App {
   text-align: center;
 }
-
+h1{
+  text-align: right;
+  padding: 0px 50px 10px 0px;
+  margin: 0px 0px 10px 0px;
+}
+.subtitle{
+  margin: 20px 0px;
+  color: #999;
+  font-weight: bolder;
+  font-size: 24pt;
+}
+p{
+  margin: 5px 0px;
+  color: #666;
+  font-size: 16pt;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +50,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+input:invalid{
+  border: 5px dashed red;
+}
+input:valid{
+  border:1px solid blue;
 }
